force-app/main/default/objects/MM_Question_Option__c/MM_Question_Option__c.object-meta.xml
<CustomObject>
    <label>Question Option</label>
    <nameField>
        <displayFormat>QN-{0000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>