force-app/main/default/objects/MM_Question_Option__c/fields/MM_Option_Text__c.field-meta.xml
<CustomField>
    <fullName>MM_Option_Text__c</fullName>
    <label>Option Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>