force-app/main/default/objects/MM_Question_Option__c/fields/MM_Order__c.field-meta.xml
<CustomField>
    <fullName>MM_Order__c</fullName>
    <description>Display order in the answer list.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>