force-app/main/default/objects/MM_Question_Option__c/fields/MM_Question__c.field-meta.xml
<CustomField>
    <fullName>MM_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>MM_Question__c</referenceTo>
    <relationshipLabel>Question Options</relationshipLabel>
    <relationshipName>Question_Options</relationshipName>
    <type>Lookup</type>
</CustomField>