force-app/main/default/objects/MM_Question_Option__c/fields/MM_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>MM_Score_Value__c</fullName>
    <description>Numeric value for scoring (e.g., 0 for &quot;Never&quot;, 4 for &quot;Always&quot;)</description>
    <label>Score Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>