force-app/main/default/objects/MM_Question_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MM_Question__c</columns>
    <columns>MM_Option_Text__c</columns>
    <columns>MM_Order__c</columns>
    <columns>MM_Score_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>